Fix scrollbars, logo placement and dock menu set for Windows support

--- a/src/renderer/assets/scss/overrides.scss
+++ b/src/renderer/assets/scss/overrides.scss
@@ -52,3 +52,7 @@ $modal-background-background-color: rgba($black, 0.1);
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
+
+html {
+  overflow-y: auto;
+}
